[gd_scene load_steps=5 format=3 uid="uid://b2criqflyiaqv"]

[ext_resource type="Script" path="res://scripts/actor/player.gd" id="1_03rxt"]
[ext_resource type="SpriteFrames" uid="uid://bbulakorwpp75" path="res://animations/player.tres" id="2_00jcj"]
[ext_resource type="AudioStream" uid="uid://chsgi5kmrdc1y" path="res://assets/flappy-bird-assets/audio/die.wav" id="3_joxds"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ffjte"]
radius = 14.1421

[node name="Player" type="Area2D" groups=["flappy"]]
process_mode = 3
collision_layer = 3
script = ExtResource("1_03rxt")

[node name="Texture" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_00jcj")
animation = &"Alive"
autoplay = "Alive"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ffjte")

[node name="DirectionSwitchTimer" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_joxds")

[connection signal="timeout" from="DirectionSwitchTimer" to="." method="_on_direction_switch_timer_timeout"]
